# rikmail

./: CMakeLists.txt  LICENSE  README.md  rikmail.service  send-report.service  send-report.sh  send-report.timer
src/: CSmtp.cpp  CSmtp.h  conf.json  main.cpp  xyz.openbmc_project.ares.rikmail.xml
